--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Perspective Inside You!">
+    <meta name="description" content="We are brand enthusiasts. We are storytellers. We are a full service creative agency combining strategic thinking and sharp design to build great brands in this cut-throat business competition. The best advetising and branding company in town">
+    <meta name="keywords" content="paperrabbit paper rabbit paperrabbit PR Studio bangalore karnataka india Digital marketing company social media marketing perspectiveinsideyou paperrabitsolutions paperrabbitsolutionspvtltd branding advertising design content development animation ads UI UX SMO SEO Game design">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
